@@ -1,5 +1,5 @@
 # Sebastian Raschka 2014
 # mlxtend Machine Learning Library Extensions
 
-__version__ = '0.1.9'
+__version__ = '0.2.0'
 
